--- a/php-yii-basic/estructura/.travis.yml
+++ b/php-yii-basic/estructura/.travis.yml
@@ -1,3 +1,14 @@
+sudo: false
 language: php
 php:
   - 7.0.25
+
+services:
+    - postgresql
+
+addons:
+    postgresql: "9.6"
+    chrome: stable
+
+notifications:
+    email: false
