--- a/php-api/estructura/apache.conf
+++ b/php-api/estructura/apache.conf
@@ -2,19 +2,19 @@
     ServerName plantilla.local
 
     ServerAdmin webmaster@localhost
-    DocumentRoot /var/www/html/Proyectos/plantilla/web
+    DocumentRoot /var/www/html/Proyectos/plantilla
 
-    <Directory /var/www/html/Proyectos/plantilla/web>
+    <Directory /var/www/html/Proyectos/plantilla>
         Options +FollowSymLinks
         IndexIgnore */*
         AllowOverride All
         RewriteEngine on
 
-        # Si el directorio o el archivo existe, entonces se usa directamente:
+        ## Si el directorio o el archivo existe, entonces se usa directamente:
         RewriteCond %{REQUEST_FILENAME} !-f
         RewriteCond %{REQUEST_FILENAME} !-d
 
-        # otherwise forward it to index.php
+        ## Otherwise forward it to index.php
         RewriteRule . index.php
     </Directory>
 
